SERVER-48509 Catch and log exceptions when creating threads fail